# proj-multi-agent-distillation

./: .gitignore  CLAUDE.md  NOTICE.md  README.md  environment.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: analyst.md  data-curator.md  director.md  judge.md  literature.md  ml-trainer.md  simulation.md
.github/workflows/: ci.yml
adapters/: __init__.py  acquisition.py  contracts.py  md_backend.py  mock_model.py  preflight.py  reference_dft.py  student.py  teacher.py  uncertainty.py
agents/: analyst.md  data-curator.md  director.md  github-manager.md  judge.md  literature.md  ml-trainer.md  simulation.md
configs/: README.md
configs/examples/: acquisition.augment-atoms.yaml  acquisition.teacher-md.yaml  md_backend.yaml  reference_dft.yaml  student.grace-fs.yaml  student.simple-nn.yaml  teacher.allegro.yaml  teacher.mace-mh1.yaml  teacher.mace.yaml  uncertainty.yaml  validation_profile.ternary-surfaces.yaml  validation_profile.yaml  workflow.mace-mh1-grace-fs.yaml
configs/templates/: README.md  acquisition.yaml  md_backend.yaml  reference.yaml  student.yaml  teacher.yaml  validation_profile.yaml  workflow.yaml
examples/mace_mh1_grace_fs/: README.md  workflow.yaml
gates/: README.md  gate_vote.workflow.js
tests/: test_adapters.py  test_claude_onboarding.py  test_controller.py  test_validation_report.py
validation/: README.md  __init__.py  committee_uncertainty.py  four_channel_audit.py  report.py  structure_dynamics.py  surface_energy.py
workflow/: __init__.py  contracts.py  controller.py  integrity.py  steps.py
(+24 files in other folders)
