[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "distillation-agents"
version = "0.1.0"
description = "Genericized multi-agent workflow for teacher->student MLIP distillation"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.22",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.scripts]
distill-run = "workflow.controller:main"
distill-acquire = "adapters.acquisition:main"
distill-step = "workflow.steps:main"

[tool.setuptools]
packages = ["adapters", "validation", "workflow"]

# Install in editable mode so `adapters`/`validation` are importable regardless
# of your working directory:
#   pip install -e .
